<resources>
    <string name="app_name">Telegram</string>
    <string name="create_group">Create group</string>
    <string name="create_secret_chat">Create secret chat</string>
    <string name="create_channel">Create channel</string>
    <string name="contacts">Contacts</string>
    <string name="calls">Calls</string>
    <string name="saved_messages">Saved messages</string>
    <string name="settings">Settings</string>
    <string name="add_friends">Add friends</string>
    <string name="faq">FAQ about Telegram</string>

    <string name="chats">Chats</string>

    <string name="account">Account</string>

    <string name="test_username">Test Username</string>
    <string name="test_status">Test Status</string>

    <string name="test_phone">+123456789</string>
    <string name="test_login">\@TestLogin</string>
    <string name="test_information">Test information</string>
    <string name="click_to_change_phone">Click to change phone</string>
    <string name="click_to_change_login">Click to change login</string>
    <string name="click_to_change_information">Write information about yourself</string>

    <string name="change_name">Change name</string>
    <string name="exit">Exit</string>

    <string name="next">Next</string>
    <string name="register_image">Register image</string>
    <string name="enter_code">Enter code</string>
    <string name="register_text_sent_sms">We have sent an SMS with an activation code to your phone</string>
    <string name="register_hint_default_code">- - - - - -</string>
    <string name="register_title_your_phone">Your phone</string>
    <string name="enter_phone_number">Enter phone number</string>
    <string name="ok">OK</string>
    <string name="auth_complete">Authorization complete, you are welcome!</string>

    <string name="auth_phone_hint">Enter your phone number</string>
    <string name="settings_input_name">Name</string>
    <string name="settings_input_surname">Surname</string>
    <string name="settings_toast_empty_name">Name can\'t be empty!</string>
    <string name="toast_details_update">Details updated</string>
    <string name="settings_hint_username">Username</string>
    <string name="username_is_empty">Username is empty!</string>
    <string name="this_user_is_exist">This user is exist!</string>
    <string name="settings_change_information">Information</string>
    <string name="something_was_wrong">Something was wrong!</string>
    <string name="read_contacts">Read contacts</string>
    <string name="contacts_title">Contacts</string>
    <string name="online">Online</string>
    <string name="message_hint">Message</string>
    <string name="enter_message">Enter message!</string>
    <string name="send_message_button_picture">send_message_button_picture</string>
    <string name="telegram_title">Telegram</string>
    <string name="image_sent">Image sent</string>
    <string name="chat_image">chat image</string>
    <string name="recording">RECORDING</string>
    <string name="play_button">play_button</string>
    <string name="button_attach_image">button_attach_image</string>
    <string name="button_attach_file">button_attach_file</string>
    <string name="name_item">Name item</string>
    <string name="last_message">Last message</string>
    <string name="clear_chat">Clear chat</string>
    <string name="delete_chat">Delete chat</string>
    <string name="chat_deleted">Chat deleted</string>
    <string name="chat_cleared">Chat cleared</string>
    <string name="add_people_to_chat">Add people to chat</string>
    <string name="information_about_chat">Information about chat</string>
    <string name="add_members_to_chat">Add members to chat!</string>
    <string name="enter_name_of_group">Enter name of group!</string>


    <plurals name="count_members">
        <item quantity="one">%d member</item>
        <item quantity="many">%d members</item>
    </plurals>
</resources>